ref: generateGlobalProviders.ts script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,10 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true
-  }
+  },
+  "plugins": [
+    {
+      "transform": "./scripts/generateGlobalProviders.ts"
+    }
+  ]
 }
