--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
+    "generate-global-providers": "ts-node scripts/generateGlobalProviders.ts",
+    "prestart": "npm run build",
+    "prebuild": "npm run generate-global-providers",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run generate-global-providers && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "ts-migrate": "ts-migrate",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -23,7 +27,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-morph": "^19.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.1",
@@ -46,6 +51,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
+    "ts-migrate": "^0.1.35",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
