--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "generate-global-providers": "ts-node scripts/generateGlobalProviders.ts",
     "prestart": "npm run build",
-    "prebuild": "npm run generate-global-providers",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "npm run generate-global-providers && nest start --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -37,6 +35,7 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.64",
     "@types/express": "^4.17.17",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
