--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "glob": "^10.3.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "ts-morph": "^19.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.1",
