docs: set values of main and types properties to use proper path 'lib'

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1-beta.0",
   "private": false,
   "description": "Enables seamless DI within the Nest Framework.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index.d.ts",
   "license": "MIT",
   "scripts": {
     "prestart": "npm run build",
-    "build": "tsc -p tsconfig.build.json",
-    "nest-build": "nest build",
+    "build:lib": "tsc -p src/lib",
+    "prepare": "npm run build:lib",
+    "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
