--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "@nestjs/auto-injectable",
-  "version": "0.0.1-beta.0",
+  "name": "@tiny-nestjs/auto-injectable",
+  "version": "0.0.1-beta.1",
   "private": false,
   "description": "Enables seamless DI within the Nest Framework.",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/lib"
+  ],
   "license": "MIT",
   "scripts": {
     "prestart": "npm run build",
-    "build:lib": "tsc -p src/lib",
+    "build:lib": "tsc -p ./tsconfig.json",
     "prepare": "npm run build:lib",
     "build": "nest build",
     "start": "nest start",
