--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiny-nestjs/auto-injectable",
-  "version": "0.0.1-beta.4",
+  "version": "0.0.1",
   "private": false,
   "description": "Enables seamless DI within the Nest Framework.",
   "main": "dist/index.js",
@@ -20,6 +20,15 @@
     "start:debug": "nest start --debug --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "keywords": [
+    "nest",
+    "nestjs",
+    "ioc",
+    "ioc container",
+    "auto di",
+    "automatically",
+    "dependency injection"
+  ],
   "dependencies": {
     "@nestjs/common": "^10.1.3",
     "@nestjs/core": "^10.1.3",
