--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiny-nestjs/auto-injectable",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": false,
   "description": "Enables seamless DI within the Nest Framework.",
   "main": "dist/index.js",
@@ -10,6 +10,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "prepack": "npm run build:lib",
     "prestart": "npm run build",
     "build:lib": "rm -rf dist && mkdir dist && tsc -p tsconfig.lib.json --sourceMap false",
     "build": "nest build",
