--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiny-nestjs/auto-injectable",
-  "version": "0.1.0",
+  "version": "0.0.1-beta.0",
   "private": false,
   "description": "Enables seamless DI within the Nest Framework.",
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
   "scripts": {
     "prepack": "npm run build:lib",
     "prestart": "npm run build",
-    "build:lib": "rm -rf dist && mkdir dist && tsc -p tsconfig.lib.json --sourceMap false",
+    "build:lib": "npm cache clean --force && tsc -p tsconfig.lib.json --sourceMap false",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
