--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "test": "jest",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky install"
   },
